--- a/contact/index.html
+++ b/contact/index.html
@@ -37,7 +37,7 @@
 							<h2 class="major"><span class="icon fa-coffee"></span> Personal Email</h2>
 								<p>You can contact me at <code>omar@ganai.com</code>. I respond to emails that are <a href="http://five.sentenc.es">five sentences</a> or less as soon as I have a free moment. Anything longer, I bucket into a folder that is checked and responded to in the morning and afternoon.</p>
 								<div class="box">
-									<h3>If confidentiality is important...</h3>
+									<h3><span class="icon fa-lock"></span> If confidentiality is important...</h3>
 									If you would like to send me an encrypted message, please use <a href="https://keybase.io/encrypt#oganai">this form</a>. You can verify this is me at my <a href="https://keybase.io/oganai">keybase profile</a>.</p>
 								</div>
 								<br>
