--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<section>
 						<div class="content">
 							<div class="inner">
-									<h2>Practical Motivation Science</h2>
+									<h2><span class="icon fa-flask"></span> Practical Motivation Science</h2>
 									<p>Articles, thought experiments, and wild speculation about applying behavior change science to the practical problems facing product managers and designers. Season 1 has received 6,000+ views so far.</p>
 									<div class="content">
 										<section>
@@ -121,16 +121,16 @@
 						<!-- Email -->
 							<section id="contact" class="wrapper style1 fade-up">
 								<div class="inner">
-									<h2>Personal Email</h2>
+									<h2><span class="icon fa-coffee"></span> Personal Email</h2>
 									<p>You can contact me at <code>omar@ganai.com</code>. I respond to emails that are <a href="http://five.sentenc.es">five sentences</a> or less as soon as I have a free moment. Anything longer, I bucket into a folder that is checked and responded to in the morning and afternoon.</p>
 									<div class="box">
-										<h3>If confidentiality is important...</h3>
+										<h3><span class="icon fa-lock"></span> If confidentiality is important...</h3>
 										If you would like to send me an encrypted message, please use <a href="https://keybase.io/encrypt#oganai">this form</a>. You can verify this is me at my <a href="https://keybase.io/oganai">keybase profile</a>.</p>
 									</div>
 									<br>
-									<h2>Business Email</h2>
+									<h2><span class="icon fa-briefcase"></span> Business Email</h2>
 									<p>If you have questions or comments about <a href="http://habitry.com">Habitry</a> please use this email: <code>omar@habitry.com</code>. I aim to respond in the morning and afternoon.</p>
-									<h2>Phone Calls</h2>
+									<h2><span class="icon fa-phone"></span> Phone Calls</h2>
 									<p>If you want to talk about something that doesn't fit into a five-sentence email, feel free to schedule a phone call. I keep my calendar up-to-date, so all you have to do is pick a convenient time.</p>
 									<ul class="actions">
 										<li><a href="http://ganai.com/call" class="button">Schedule a call</a></li>
