--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -44,6 +44,8 @@
 				</section>
 
 					<section id="mission" class="wrapper style1">
+						<div class="content">
+
 						<div class="inner">
 							<span class="image left "><img src="habitry-logo.png" width=alt=""/></span>
 							<h2>The Mission</h1>
@@ -53,6 +55,7 @@
 							<p>Our central hypothesis was that the most effective and efficient way to help clients change their health behavior was in groups. However health coaches had no tools to work in groups online that preserved their high-touch, one-on-one approach.</p>
 
 						</div>
+					</div>
 
 					</section>
 
