--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<!-- Projects -->
 						<section id="projects" class="wrapper style3 fade-up">
 							<div class="inner">
-								<h2>Select Projects</h2>
+								<h2><span class="icon fa-flask"></span> Select Projects</h2>
 								<p>Omar Ganai is an expert in the practical application of Motivation and Behavior Change Science. He's made companies, products, and services that have helped thousands of people change their behavior. Here are some of them.</p>
 								<div class="features">
 									<section>
@@ -105,17 +105,17 @@
 				<!-- Writing -->
 				<section id="writing" class="wrapper style2 spotlights">
 					<section>
-						<div class="content">
-							<div class="inner">
-									<h2><span class="icon fa-flask"></span> Practical Motivation Science</h2>
-									<p>Articles, thought experiments, and wild speculation about applying behavior change science to the practical problems facing product managers and designers. Season 1 has received 6,000+ views so far.</p>
-									<div class="content">
-										<section>
-												<ul class="actions">
-													<li><a href="https://medium.com/practical-motivation-science" class="button">Medium Publication</a></li>
-												</ul>
+							<a href="#" class="image"><img src="images/pms3.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Practical Motivation Science</h2>
+									<p>Articles, thought experiments, and wild speculation about applying Behavior Change Science to the practical problems facing product managers and designers. Season 1 has received 6,000+ views so far.</p>
+									<ul class="actions">
+										<li><a href="https://medium.com/practical-motivation-science" class="button">Read on Medium</a></li>
+									</ul>
 								</div>
 							</div>
+						</section>
 						</section>
 
 						<!-- Email -->
@@ -135,6 +135,7 @@
 									<ul class="actions">
 										<li><a href="http://ganai.com/call" class="button">Schedule a call</a></li>
 									</ul>
+							</div>
 
 							</section>
 			</div>
