--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -27,7 +27,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="omarganai">
-    <meta name="twitter:title" content="Omar ganai">
+    <meta name="twitter:title" content="Omar Ganai">
     <meta name="twitter:description" content="Habitry iOS — A cutting-edge behavior change app for health coaches.">
     <meta name="twitter:image" content="title.png">
 
