--- a/resume/index.html
+++ b/resume/index.html
@@ -379,7 +379,7 @@
 
 	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Maintained an active community with over 600 members.</li>
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Developed into open-source knowledge base to answer behavior change questions for coaches.</li>
+	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Developed into a knowledge base to answer behavior change questions for coaches.</li>
 
 	                    </ul>
 	                    </div>
