--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 									<section>
 										<span class="icon major fa-mobile"></span>
 										<h3>Habitry iOS</h3>
-										<p>A behavior change app for health coaches. Sold by Habitry  2014-2016.</p>
+										<p>A behavior change app for coaches. Sold by Habitry  2014-2016.</p>
 										<a href="http://ganai.com/projects/habitryios/" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-graduation-cap"></span>
 										<h3>Habitry Professionals</h3>
-										<p>Habitry's education platform for health coaches. Sold by Habitry in 2016.</p>
+										<p>Habitry's education platform for coaches. Sold by Habitry in 2016.</p>
 										<a href="http://ganai.com/projects/habitrypros/" class="button fit">Learn More</a>
 									</section>
 									<section>
