--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -136,7 +136,7 @@
 											 </tr>
 											 <tr>
 												 <td style="background-color: #f88432;"><b>REFLECTIVE MOTIVATION</b></td>
-												 <td>Coaches needed feel the value of the Habitry iOS app to use it.</td>
+												 <td>Coaches needed to feel the value of the Habitry iOS app to use it.</td>
 											 </tr>
 											 <tr>
 												 <td style="background-color: #f88432;"><b>AUTOMATIC MOTIVATION</b></td>
