--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="inner">
 							<img class="image" src="images/omar.jpg">
 							<h1>Omar Ganai</h1>
-							<p>I help companies define, design, and develop for behavior change with and within products, projects, and programs.</p>
+							<p>I help companies define, design, and develop for behavior change with digital products and services.</p>
 								<ul class="icons">
 												<li><a href="https://twitter.com/omarganai" class="icon fa-twitter fa-2x"><span class="label">Twitter</span></a></li>
 												<li><a href="https://github.com/OmarGanai" class="icon fa-github fa-2x"><span class="label">GitHub</span></a></li>
